# wordlist-generation-public

./: .env  .env.example  .gitignore  Dockerfile  README.md  client.py  common.py  deploy  docker-entrypoint.sh  es.txt  fmt  grammar.py  hf.py  llama-server.toml  logits_processor.py  main.py  parallel_config.yaml  pyproject.toml  qwen-server.toml  readme  requirements-moe.txt  server.py  setup.sh  start.sh  tp_launcher.py  trie.py  vllm.py
scripts/: run_batch.sh  run_chat.sh
wordlist_generation/: app_batch.py  app_chat.py  logging_config.py  main.py  settings.py
wordlist_generation/api/: dependencies.py
wordlist_generation/api/routers/: __init__.py  batch.py  chat.py  models.py
wordlist_generation/app/: main.py
wordlist_generation/config/: settings.py
wordlist_generation/core/: auth.py  generation.py  init.py  prefix.py  tokens.py
wordlist_generation/inference/: generation.py  templates.py
wordlist_generation/inference/vocab_constraints/: prefix.py  tokens.py  trie.py
wordlist_generation/models/: chat.py  init.py
wordlist_generation/qwen3_moe_fused/: __init__.py  functional.py  modular_qwen3_moe_fused.py
wordlist_generation/qwen3_moe_fused/grouped_gemm/: __init__.py  autotuning.py  backward_dw.py  forward.py  forward_transposed.py  interface.py
wordlist_generation/qwen3_moe_fused/kernels/: __init__.py  indexing.py
wordlist_generation/qwen3_moe_fused/quantize/: __init__.py  layer.py  quantizer.py
wordlist_generation/routers/: batch.py  chat.py
wordlist_generation/schemas/: chat.py
wordlist_generation/scripts/: fuse_model.py  fuse_save_checkpoint.py  launch_fsdp_server.py  quantize_model.py  upload_to_hf.py
wordlist_generation/services/: batch_processor.py  batch_service.py  generation_service.py  init.py  model_service.py
wordlist_generation/tasks/: batch_job.py  init.py
wordlists/: es.txt
