[project]
name = "wordlist-generation"
version = "0.2.4"
description = "Vocabulary-constrained generation server (FastAPI + Transformers + lm-format-enforcer)"
readme = "README.md"
requires-python = ">=3.11, <3.13"

dependencies = [
    "accelerate>=0.32.0",
    "fastapi",
    "httpx",
    "lm-format-enforcer>=0.11.2",
    "pydantic>=2",
    "python-dotenv",
    "safetensors",
    "torch",
    "python-multipart",
    # Pin to feature branch providing grouped_gemm integration (DeepseekV3 MoE optimization)
    "transformers @ git+https://github.com/bzantium/transformers@feature/%2340582",
    "tokenizers>=0.20.1",
    # Tokenizers/libs commonly used by models
    "tiktoken",
    "sentencepiece",
    # Server
    "uvicorn>=0.30.0",
    # Grouped GEMM optimization
    "nv-grouped-gemm @ git+https://github.com/fanshiqing/grouped_gemm@main",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.setuptools.packages.find]
include = ["wordlist_generation*"]
