[project]
name = "wordlist-generation"
version = "0.2.3"
description = "Vocabulary-constrained generation server (FastAPI + Transformers + lm-format-enforcer)"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "accelerate==1.0.0",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "lm-format-enforcer==0.11.2",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "safetensors==0.4.5",
    "torch==2.9.1",
    "python-multipart==0.0.12",
    "bitsandbytes==0.45.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "transformers==4.50.0",
    "tokenizers==0.21.0",
    # Tokenizers/libs commonly used by models
    "tiktoken==0.8.0",
    "sentencepiece==0.2.0",
    # Server
    "uvicorn==0.32.0",
]

[dependency-groups]
dev = [
    "ruff==0.6.9",
]

[tool.setuptools.packages.find]
include = ["wordlist_generation*"]
