[project]
name = "wordlist-generation"
version = "0.2.3"
description = "Vocabulary-constrained generation server (FastAPI + Transformers + lm-format-enforcer)"
readme = "README.md"
requires-python = ">=3.11, <3.13"

dependencies = [
    "accelerate>=0.32.0",
    "fastapi",
    "httpx",
    "lm-format-enforcer>=0.11.2",
    "pydantic>=2",
    "python-dotenv",
    "safetensors",
    "torch>=2.8.0",
    "python-multipart",
    "bitsandbytes>=0.43.1; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "transformers>=4.46.2,<4.57",
    "tokenizers>=0.20.1",
    # Triton for fused MoE kernels (Linux only)
    "triton>=3.0.0; platform_system == 'Linux'",
    # Tokenizers/libs commonly used by models
    "tiktoken",
    "sentencepiece",
    # Server
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.setuptools.packages.find]
include = ["wordlist_generation*"]
